--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,7 @@ __pycache__/
 
 #don't need to send info about what you're gonna delete
 maybe_delete/
+
+# don't want any of the ariane output pushed
+/for*
+/back*
